2000-04-07  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* Makefile.in: changed [ -e filename ] to [ -f filename ]

	* src/scm/report.scm: Changed the report format to be a record.

2000-04-05  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* configure.in: removed check for eperl

	* src/reports: removed pathconfig.h.in and Sheet.? (eperl stuff)

	* src/gnome/window-help.c: took out gncReport call (eperl)

	* lib/Makefile.in: took out make dist hack

	* src/register/table-allgui.c: more error checking

	* src/SplitLedger.c: more cleanup. Fix a bug in refreshing a register
	in auto-mode where the current transaction has been deleted.

	* src/scm/report/balance-and-pnl.scm: put sub-accouts below their
	parent accounts and indent their names. Align the columns better.
	Print fully-qualified names.

2000-04-04  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/gnucash-style.c: update the styles
 	appropriately for the changes below.

	* src/register/splitreg.c: configure the ledger style register
	with a xfer to field in all modes.

	* src/SplitLedger.c (xaccSRLoadRegister): remove stock price hack.
	many code cleanups throughout file.

2000-04-03  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c: changed menu definitions to be
	statically allocated.
	* src/gnome/window-main.c: ditto

	* src/SplitLedger.c: added extra checks for boundary conditions.
	When refreshing, try to go to the same cell offset as before.

2000-04-01  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/SplitLedger.c: more generalizations needed for general
 	ledger operation.

	* src/register/splitreg.c (configLayout): add the xto cell into
	the transaction cursor.

 2000-03-31  Rob Browning  <rlb@cs.utexas.edu>

 	* src/scm/bootstrap.scm.in: use new GNC_EXPANDED_ vars.

 	* src/scm/Makefile.in: set top_srcdir and include Makefile.init

 	* src/reports/pathconfig.h.in: use new GNC_EXPANDED_ vars.

 	* src/quotes/gnc-prices.in: new file.
